--- a/Auction.Web/Content/CSS/main.css
+++ b/Auction.Web/Content/CSS/main.css
@@ -1,22 +1,321 @@
+/* ==========================================================================
+   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
+   ========================================================================== */
+
+html,
+button,
+input,
+select,
+textarea {
+    color: #222;
+}
+
+body {
+    font-size: 1em;
+    line-height: 1.4;
+}
+
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+img {
+    vertical-align: middle;
+}
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.chromeframe {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
 
 
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
+body {
+		font: Arial;
+		font-size: 11px;
+		
+}
+
+a {
+		text-decoration: none;
+		color: #000000;
+}
+
+a:hover {
+		text-decoration: underline;
+}
+
+#bg { position: fixed; top: 0; left: 0; }
+
+.bgwidth { width: 100%; }
+.bgheight { height: 100%; }
+
+#wrapper {
+		position: relative;
+		width: 970px;
+		margin-left: auto;
+		margin-right: auto;
+}
+
+.lister div.item {
+		float: left;
+		width: 310px;
+		margin-top: 10px;
+		margin-bottom: 10px;
+}
+
+.lister div.item:nth-child(3n+2) {
+		margin-left: 20px;		
+		margin-right: 20px;
+}
+
+.lister div.item img {
+		
+}
+
+.lister div.item div div {
+		
+}
+
+.lister div.data > div > div > div.image {
+		height: 281px;
+		line-height: 281px;
+		text-align: center;
+}
+
+.detail div.item {
+		float:	left;
+		width: 475px;
+}
+
+.detail div.bidding, .detail div.newbid {
+		float: right;
+		margin-left: 20px;
+}
+
+.detail div.newbid {
+		margin-top: 20px;
+}
+
+.clear {
+		clear: both;
+}
 
 
+.formfields {
+		margin: 0px;
+		padding: 0px;
+		list-style-type: none;
+		
+}
+
+.formfields li div.label, .formfields li div.input {
+		float: left;
+}
+
+.formfields li div.label {
+		width: 100px;
+}
+
+.formfields li {
+		padding-bottom: 5px;
+}
+
+.formfields .s1 {
+		width: 46px;
+}
+
+.formfields .s2 {
+		width: 100px;
+}
+
+.formfields .s3 {
+		width: 150px;
+}
+
+.formfields .s4 {
+		width: 197px;
+}
+
+.formfields .s5 {
+		width: 250px;
+}
 
 
+/* ==========================================================================
+   Media Queries
+   ========================================================================== */
 
+@media only screen and (min-width: 35em) {
 
+}
 
+@media print,
+       (-o-min-device-pixel-ratio: 5/4),
+       (-webkit-min-device-pixel-ratio: 1.25),
+       (min-resolution: 120dpi) {
 
+}
 
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
 
+.ir {
+    background-color: transparent;
+    border: 0;
+    overflow: hidden;
+    *text-indent: -9999px;
+}
 
+.ir:before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 150%;
+}
 
+.hidden {
+    display: none !important;
+    visibility: hidden;
+}
 
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
 
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
+}
 
+.invisible {
+    visibility: hidden;
+}
 
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
+
+/* ==========================================================================
+   Print styles
+   ========================================================================== */
+
+@media print {
+    * {
+        background: transparent !important;
+        color: #000 !important; /* Black prints faster: h5bp.com/s */
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
+
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
+
+    a[href]:after {
+        content: " (" attr(href) ")";
+    }
+
+    abbr[title]:after {
+        content: " (" attr(title) ")";
+    }
+
+    /*
+     * Don't show links for images, or javascript/internal links
+     */
+
+    .ir a:after,
+    a[href^="javascript:"]:after,
+    a[href^="#"]:after {
+        content: "";
+    }
+
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
+
+    thead {
+        display: table-header-group; /* h5bp.com/t */
+    }
+
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
+
+    img {
+        max-width: 100% !important;
+    }
+
+    @page {
+        margin: 0.5cm;
+    }
+
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
+
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
+}
