--- a/Auction.Web/Views/Auction/Detail.cshtml
+++ b/Auction.Web/Views/Auction/Detail.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Auction.Web.Models.AuctionItemDetailModel
-<a href="/">Overzicht</a>
 <div class="detail">
 		<div class="item">
 				<div class="header">
@@ -87,12 +86,12 @@
 												</li>
 												<li>
 														<div class="label">Telefoonnummer</div>
-														<div class="input"><input type="email" name="BiddingPhoneNumber" maxlength="20" placeholder="Telefoonnummer" class="s2" /></div>
+														<div class="input"><input type="tel" name="BiddingPhoneNumber" maxlength="20" placeholder="Telefoonnummer" class="s2" /></div>
 														<div class="clear" />
 												</li>
 												<li>
 														<div class="label">Mobiel nummer</div>
-														<div class="input"><input type="email" name="BiddingMobileNumber" maxlength="150" placeholder="Mobiel nummer" class="s2" /></div>
+														<div class="input"><input type="tel" name="BiddingMobileNumber" maxlength="150" placeholder="Mobiel nummer" class="s2" /></div>
 														<div class="clear" />
 												</li>
 												<li>
