--- a/Auction.Web/Views/Shared/SiteLayout.cshtml
+++ b/Auction.Web/Views/Shared/SiteLayout.cshtml
@@ -24,6 +24,17 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 				<div id="wrapper">
+						<div class="header">
+								<span class="title">
+										<span class="small">Hervormde Gemeente</span><br />
+										<span class="large">Rouveen</span>
+								</span>
+						</div>
+						<ul class="menu">
+								<li><a href="~/">Veiling</a></li>
+								<li><a href="~/Content/FAQ">Uitleg</a></li>
+								<li><a href="~/Auction/Add">Item toevoegen</a></li>
+						</ul>
 						@RenderBody()
 				</div>
         <script src="/Scripts/plugins.js"></script>
