--- a/Auction.Web/Views/Shared/SiteLayout.cshtml
+++ b/Auction.Web/Views/Shared/SiteLayout.cshtml
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=1024, maximum-scale=1.0">
 
         <link rel="stylesheet" href="/Content/css/normalize.min.css">
         <link rel="stylesheet" href="/Content/css/main.css">
@@ -16,6 +16,8 @@
         <script src="/Scripts/vendor/modernizr-2.6.2.min.js"></script>
 				<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="Script/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+				<script src="/Scripts/vendor/jquery.validate.min.js"></script>
+				<script src="/Scripts/vendor/jquery.validate.unobtrusive.min.js"></script>
     </head>
     <body>
 				
