--- a/Auction.Web/Views/Auction/Index.cshtml
+++ b/Auction.Web/Views/Auction/Index.cshtml
@@ -19,6 +19,10 @@
 												</div>
 												<ul>
 														<li>
+																<span class="label">Veilingnummer:</span>
+																<strong>@item.AuctionNumber</strong>
+														</li>
+														<li>
 																<span class="label">Geplaatst op:</span>
 																<strong>@item.DateFormatted</strong>
 														</li>
