--- a/Auction.Web/Views/Shared/SiteLayout.cshtml
+++ b/Auction.Web/Views/Shared/SiteLayout.cshtml
@@ -18,6 +18,9 @@
         <script>window.jQuery || document.write('<script src="Script/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 				<script src="/Scripts/vendor/jquery.validate.min.js"></script>
 				<script src="/Scripts/vendor/jquery.validate.unobtrusive.min.js"></script>
+				<script src="/Scripts/vendor/jquery.validate.messages-nl.js"></script>
+				<script src="/Scripts/vendor/jquery.globalize.js"></script>
+				<script src="/Scripts/vendor/jquery.globalize.culture.nl-NL.js"></script>				
     </head>
     <body>
 				
