--- a/Auction.Web/Views/Content/FAQ.cshtml
+++ b/Auction.Web/Views/Content/FAQ.cshtml
@@ -1,9 +1,10 @@
 ﻿<div>
 		<h3>Veiling</h3>
-		Een veiling blijft 14 dagen op de site vermeld. Na 14 dagen wordt het item toegekend aan de hoogste bieder. </br>
+		Een veiling item blijft @Auction.BLL.Config.Auction.DaysValid dagen op de site vermeld. Na @Auction.BLL.Config.Auction.DaysValid dagen wordt het item toegekend aan de hoogste bieder. </br>
 		Hiervan ontvangt u een e-mail.<br />
 		<br />
 		Een item toevoegen kunt u <a href="~/Auction/Add">hier</a> doen
 		<h3>Betaling</h3>
-		Indien uw bod het hoogste is geworden dient u het geld over te maken op rekeningnummer: 123456789
+		Indien uw bod het hoogste is geworden dient u het geld over te maken op rekeningnummer: @Auction.BLL.Config.AccountNumber.<br />
+		Uw ontvangt dan tevens de contactgegevens waar u het veiling item kunt ophalen.
 </div>
